# control-rs485-switch-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
control_rs485_switch_python/: __init__.py  controller.py
other_package/lib-switch-operate/: Cargo.toml
other_package/lib-switch-operate/src/: config.rs  lib.rs  operate.rs  params.rs  prelude.rs  utils.rs
src/: lib.rs
src/backend/: mod.rs  operate.rs  params.rs  prelude.rs  utils.rs
