[package]
name = "control-rs485-switch-python"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "control_rs485_switch_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["abi3-py37"] }
lib-switch-operate = { path = "other_package/lib-switch-operate" }
tokio = { version = "1", features = ["full"] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols